<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_movie_poster" />

    <Switch
        android:id="@+id/set_favorite"
        android:layout_width="200dp"
        android:textOn="@string/favorite_on"
        android:textOff="@string/favorite_off"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_release_date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_vote_average" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_synopsis" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trailer_section_title" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_trailers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_error_message_trailers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_trailers"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_section_title" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_error_message_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_reviews"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />



</LinearLayout>